--- a/Telco Customer Churn Analysis.ipynb
+++ b/Telco Customer Churn Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPV+H5wpRAt1luGmPl6eNTL",
+      "authorship_tag": "ABX9TyOj1QWV5Avimbqsdhh7gKJo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Telco Customer Churn Analysis\\**\n",
+        "**Telco Customer Churn Analysis**\n",
         "\n",
         "\n"
       ],
